Se realizo el control de excepsiones ademas que se realizo el reto opcional de asignacion de jefes por departamento, cada departamento puede tener solo un jefe, el jefe deber ser un empleado del mismo departamento, la manera en que se realizo esto, fue que al asignar un encargado a un departamento si el empleado pertenece a otro departamento, por la asignacion de encargado a otro departamento se le realiza el cambio a ese mismo departamento, tambien se valido que un empleado no pueda ser jefe de mas de un departamento
