# app/Http/Requests/UpdateDepartamentoRequest.php
@@ -6,9 +6,7 @@ use Illuminate\Foundation\Http\FormRequest;
 
 use Illuminate\Support\Facades\Auth;
 
-use Illuminate\Validation\Rule;
-
-class StoreDepartamentoRequest extends FormRequest
+class UpdateDepartamentoRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -27,12 +25,8 @@ class StoreDepartamentoRequest extends FormRequest
     {
         return [
             //
-            'nombre_departamento' => [
-                'string', 
-                'min:4', 
-                'max:20', 
-                Rule::unique('departamentos', 'nombre_departamento')->ignore($this->route('id'), 'departamento_id')],
-            'encargado_id' => ['integer', 'nullable', 'sometimes', 'exists:empleados,empleado_id', 'unique:departamentos'],
+            'nombre_departamento' => [ 'string', 'min:4', 'max:20'],
+            'encargado_id' => ['integer', 'nullable', 'sometimes', 'exists:empleados,empleado_id'],
         ];
     }
 }
